# workshop-genai

./: .gitignore  LICENSE  README.md  docker-compose.yml
Testing DB connection/: create_toke.py  populate_db.py  test-RDS.py
backend/: .env.example  Dockerfile  dependencies.py  main.py  requirements.txt  test_db.py
backend/admin/: routes.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 5a77fef84992_created_matches_table_and_updated_.py  6709021a964a_create_initial_tables.py  69342120520e_today_morning.py  fc0022addadd_latest_database_update.py
backend/auth/: __init__.py  dependencies.py  router.py  schemas.py
backend/backend/: __init__.py  database.py  main.py  pyproject.toml
backend/backend/auth/: dependencies.py  router.py  utils.py
backend/backend/leaderboard/: router.py
backend/backend/matches/: router.py
backend/backend/models/: Legacy model file.py  __init__.py  comparison.py  leaderboard.py  matches.py  submission.py  team.py
backend/backend/submissions/: __init__.py  router.py
backend/backend/utils/: match_generation.py
backend/matches/: router.py  schemas.py
backend/models/: __init__.py  base.py  comparison.py  leaderboard.py  matches.py  models.py  submission.py  team.py
backend/submissions/: dependencies.py  models.py  router.py  schemas.py
backend/tasks/: match_tasks.py
backend/utils/: calculate_score.py  leaderboard_sync.py  scheduler.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
myenv/Scripts/: activate  activate.bat
(+3 files in other folders)
